--- a/resources/css/filament.css
+++ b/resources/css/filament.css
@@ -12,3 +12,7 @@ input.form-input{
 textarea.textarea-input{
     @apply block w-full duration-75 rounded-lg shadow-sm focus:border-primary-500 focus:ring-1 focus:ring-inset focus:ring-primary-600 border-gray-300;
 }
+
+.text-egg-blue{
+    color: #00D2CD;
+}
